# gnn-nlp-vuln-detection

./: .gitattributes  .gitignore  BACKEND_STRUCTURE.md  LICENSE  Makefile  README.md  gnn_models.py  gnn_models_2.py  graph_23192498350490331202860813432214161389.dot  graph_23192498350490331202860813432214161389_labeled.dot  main.py  pyproject.toml  requirements.txt
checkpoints/: cwe_detector.pth  cwe_detector_latest.pth  metrics.csv  optimal_thresholds.csv
comparison/: Semgrep_Code_Findings.csv  aikido_issues.json  output.json
comparison/plots/: tools_comparison_metrics.csv
config/: dataset_paths.yaml  model_params.yaml  training.yaml
data/cwe_data/: cwe_definitions.json
data/example_code/non_vulnerable/: example_safe.c  index.html
data/example_code/vulnerable/: example_vuln.c
data/processed/: dataset-diversevul-medium-c.pt  dataset-diversevul-small-c.pt  dataset-small.pt
data/processed/vuln_data/: functions.json
docs/: TESTING.md  comparison.rst  diversevul_dataset_loader.md  index.rst  megavul_dataset_loader.md  process_overview.rst  scripts.rst
examples/: diversevul.py  diversevul_dataset_usage.py  load_c_analyze.py  megavul_dataset_usage.py  megavul_simple.py  simple_conversion_example.py
examples/onnx/: go.mod  go.sum  main.go  train.py
notebooks/: GNN_overview.ipynb
plots/: cwe_metrics.csv
plots-1/: cwe_metrics.csv
plots-128-dim-3-layers-max-pooling/: cwe_metrics.csv
plots-128-dim-4-layers-max-pooling/: sample.json
plots-256-dim-4-layers/: cwe_metrics.csv
plots_comparison/: corgea_report.csv  metrics_per_cwe.csv
scripts/: README.md  ci_test.sh  evaluate.py  lint.sh  preprocess_data.py  process_dataset.py  reformat.sh  train.py
src/: analyze_report.py  create_report.py  dataset_analyzer.py  dataset_to_code.py  feature_extractor.py  load_c_analyze.py  merge.py  process_dataset.py  process_dataset_workers.py  run_prediction.py  run_prediction_comparison.py  scan_source.py  train.py
src/gnn_vuln_detection/code_representation/: ast_parser.py  code_representation.py  feature_extractor.py  graph_builder.py
src/gnn_vuln_detection/data_processing/: dataset_loader.py  graph_converter.py
src/gnn_vuln_detection/dataset/: __init__.py  dataset.py  dataset_loader.py  loaders.py
src/gnn_vuln_detection/models/: factory.py
src/gnn_vuln_detection/models/gnn/: README.md  __init__.py  base.py  gat.py  standard.py
src/gnn_vuln_detection/naming_analysis/: analyzer.py  patterns.py
src/gnn_vuln_detection/nlp_integration/: api_patterns.py  code_complexity_analyzer.py  code_duplication.py  text_encoders.py  variable_analyzer.py
src/gnn_vuln_detection/pipelines/: __init__.py  nlp_analysis.py  prediction.py
src/gnn_vuln_detection/training/: __init__.py  losses.py  metrics.py  train_loop.py
src/gnn_vuln_detection/utils/: config_loader.py  file_loader.py  utils.py
src/tests/: run_tests.py  test_ast_parser.py  test_diversevul_loader.py  test_graph_builder.py  test_megavul_loader.py  test_models.py  test_naming_analyzer.py  test_naming_patterns.py
thesis/figures/: graph_23192498350490331202860813432214161389_labeled.dot
